# mcp-stdio-gateway

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  config.example.toml
src/: child.rs  config.rs  error.rs  jsonrpc.rs  lib.rs  main.rs  proxy.rs  routes.rs  session.rs  shutdown.rs  state.rs
tests/: integration.rs
tests/echo_fixture/: Cargo.toml
tests/echo_fixture/src/: main.rs
