[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
description = "Local HTTP+SSE gateway that proxies multiple stdio MCP servers"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
async-stream = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[[bin]]
name = "mcp-server"
path = "src/main.rs"
